# omo_r1

./: .gitignore  README.md
omo_r1/: CMakeLists.txt  package.xml
omo_r1_bringup/: 99-omoros.rules  CMakeLists.txt  package.xml  setup.py
omo_r1_bringup/bash_setting/: init_sh.sh
omo_r1_bringup/camera_info/: omo_r1_camera.yaml
omo_r1_bringup/config/: robot_config.yaml
omo_r1_bringup/launch/: omo_r1_camera.launch  omo_r1_fiducial.launch  omo_r1_imu.launch  omo_r1_lidar.launch  omo_r1_lidar_G2.launch  omo_r1_lift.launch  omo_r1_model.launch  omo_r1_motor.launch  omo_r1_remote.launch  omo_r1_remote_G2.launch  omo_r1_robot.launch  omo_r1_robot_G2.launch  ready_robot.launch  simple_move.launch  turtlebot3_core.launch
omo_r1_bringup/launch/includes/: description.launch.G2.xml  description.launch.xml
omo_r1_bringup/msg/: R1MotorStatus.msg  R1MotorStatusLR.msg
omo_r1_bringup/nodes/: omo_r1_lift.py  omo_r1_motor_node.py  omo_r1_packet_handler.py  omo_r1d2_packet_handler.py
omo_r1_bringup/scripts/: create_udev_rules.sh
omo_r1_description/: CMakeLists.txt  package.xml
omo_r1_description/urdf/: omo_r1.gazebo.xacro  omo_r1.urdf.xacro
omo_r1_gazebo/: CMakeLists.txt  package.xml
omo_r1_gazebo/launch/: omo_r1_empty_world.launch  omo_r1_erica.launch  omo_r1_gazebo_rviz.launch  omo_r1_turtlebot3_house.launch  omo_r1_turtlebot3_world.launch
omo_r1_gazebo/models/erica/: model.sdf
omo_r1_gazebo/models/erica/elements/3d_printer/: model.sdf
omo_r1_gazebo/models/erica/elements/3d_printer/meshes/: model.dae
omo_r1_gazebo/models/erica/elements/tv/: model.config  model.sdf
omo_r1_gazebo/models/erica/elements/tv/meshes/: model.dae
omo_r1_gazebo/models/erica/parts/3d_printer/: model.config
omo_r1_gazebo/sdf/: omo_r1.gazebo.xacro
omo_r1_gazebo/worlds/: erica.world
omo_r1_image_recognition/: CMakeLists.txt  package.xml
omo_r1_image_recognition/launch/: omo_r1_ar_track.launch  omo_r1_ar_track_model.launch
omo_r1_image_recognition/rviz/: ar_track.rviz
omo_r1_marker_tracker/: CMakeLists.txt  package.xml
omo_r1_marker_tracker/config/: controller_setting.yaml
omo_r1_marker_tracker/launch/: marker_tracker.launch
omo_r1_marker_tracker/nodes/: marker_tracker.py
omo_r1_navigation/: CMakeLists.txt  package.xml
omo_r1_navigation/launch/: amcl.launch  move_base.launch  omo_r1_navigation.launch  omo_r1_navigation_G2.launch  omo_r1_navigation_rviz.launch
omo_r1_navigation/maps/: map.pgm  map.yaml
omo_r1_navigation/param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml
omo_r1_slam/: CMakeLists.txt  package.xml
omo_r1_slam/launch/: omo_r1_cartographer.launch  omo_r1_frontier_exploration.launch  omo_r1_gmapping.launch  omo_r1_hector.launch  omo_r1_karto.launch  omo_r1_slam.launch  omo_r1_slam_G2.launch  omo_r1_slam_rviz.launch
omo_r1_teleop/: CMakeLists.txt  package.xml  setup.py
omo_r1_teleop/launch/: omo_r1_teleop_key.launch
omo_r1_teleop/nodes/: omo_r1_teleop_key
omo_simple_position_controller/: CMakeLists.txt  package.xml
omo_simple_position_controller/action/: VanillaPosition.action
omo_simple_position_controller/config/: controller_setting.yaml
omo_simple_position_controller/launch/: simple_position_ctrl.launch
omo_simple_position_controller/nodes/: PID_pw.py  vanilla_pos_ctrl_ac.py
omo_simple_position_controller/notebook/: R1_marker_tracking.ipynb  position_controller_test.ipynb
