<?xml version="1.0"?>
<package format="2">
  <name>omo_r1_bringup</name>
  <version>0.0.1</version>
  <description>
    OMO R1 robot package - launchers for robot bringup
  </description>
  <license>Apache 2.0</license>
  <author email="bishopearson@gmail.com">Bishop Pearson</author>
  <maintainer email="bishopearson@gmail.com">Bishop Pearson</maintainer>
  <url type="wiki">http://wiki.ros.org/turtlebot3_bringup</url>
  <url type="website">http://omorobot.com</url>
  <url type="forum">http://omorobot1.synology.me</url>
  <url type="repository">https://github.com/bishopearson/omo_r1</url>
  <url type="bugtracker">https://github.com/bishopearson/omo_r1/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>omo_r1_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>omo_r1_description</exec_depend>
  <exec_depend>omo_r1_teleop</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
</package>
