<?xml version="1.0"?>
<package format="2">
  <name>omo_r1_bringup</name>
  <version>0.0.1</version>
  <description>
    OMO R1 robot package - launchers for robot bringup
  </description>
  <license>Apache 2.0</license>
  <author email="bishopearson@gmail.com">Bishop Pearson</author>
  <maintainer email="bishopearson@gmail.com">Bishop Pearson</maintainer>
  <url type="wiki">http://wiki.ros.org/turtlebot3_bringup</url>
  <url type="website">http://omorobot.com</url>
  <url type="forum">http://omorobot1.synology.me</url>
  <url type="repository">https://github.com/bishopearson/omo_r1</url>
  <url type="bugtracker">https://github.com/bishopearson/omo_r1/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>usb_cam</depend>
  <depend>omo_r1_description</depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
